<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_brick</name>
  <version>1.0.0</version>
  <description>A ROS 2 package for controlling a robot to catch a brick</description>
  <maintainer email="loganstuartboswell@gmail.com">Logan Boswell</maintainer>
  <license>GPLv3</license>

  <exec_depend>rclpy</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
